# topdata-package-release-builder

./: .env.example  .gitignore  CONVENTIONS-PYTHON.md  README.md  cli.py  pyproject.toml  setup.py  xxxxxsetup.py
ai_docs/: PROJECT_SUMMARY.md
ai_docs/done/: 250718__CHECKLIST__Implement Foundation Plugin Injection Feature.md  250718__PLAN__Implement Foundation Plugin Injection Feature.md  250731__PLAN__print-instructions-for-online-documentation.md  250802__PLAN__automate_manuals_repository_publishing.md  250802__PLAN__better-git.md  250802__PLAN__more-verbosity.md  250809__CHECKLIST__Plugin_Variant_Creation.md  250809__CHECKLIST__refactor-cli.md  250809__PLAN__Plugin_Variant_Creation.md  250809__PLAN__refactor-cli.md  250820__PLAN__Enhance_Slack_Notifications_with_Variant_Package_Details.md  CHECKLIST__add_source_dir_option.md  PLAN__add_source_dir_option.md  PLAN__git_version_bumping.md  PLAN__verbose_timestamps.md
ai_docs/plans/: 250718__CHECKLIST__Implement Foundation Plugin Injection Feature.md  250731__PLAN__Activating_Documentation_Publishing.md  (+10 more)
manual/: 10-installation.de.md  10-installation.en.md  30-configuration.de.md  30-configuration.en.md  40-usage.de.md  40-usage.en.md  50-faq.de.md  50-faq.en.md  index.de.md  index.en.md
shopware_plugin_builder/: cli.py
tests/: __init__.py  test_string_utils.py
topdata_package_release_builder/: __init__.py  cli.py  config.py  foundation_injector.py  git.py  manual.py  pdf.py  plugin.py  release.py  remote.py  slack.py  string_utils.py  table.py  tree.py  variant.py  version.py  workflow.py
